fixed some probs with fb, add ui-utils.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
     <script src="scripts/globals.js"></script>
+    <script src="scripts/ui-utils.js"></script>
     <script src="scripts/header.js"></script>
     <script src="scripts/variable-texts.js"></script>
     <script src="scripts/static-texts.js"></script>
