--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="scripts/sound-mixer.js"></script>
     <script src="scripts/start-end-round.js"></script>
     <script src="scripts/tableHTML.js"></script>
+    <script src="scripts/test-stack.js"></script>
 
     <title>Zauberkette</title>
 </head>
