update goalValue via fb

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
 <body onload="renderIndex()" id="body">
     <header id="headInfoID"></header>
-    <main id="startSideContent"></main>
+    <main id="mainContent">
+        
+    </main>
 
 
     </main>
